--- a/DI-App/Base.lproj/Main.storyboard
+++ b/DI-App/Base.lproj/Main.storyboard
@@ -59,7 +59,7 @@
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <segue destination="zOY-Wl-vVa" kind="presentation" id="PZ5-TI-i1j"/>
+                        <segue destination="zOY-Wl-vVa" kind="custom" id="PZ5-TI-i1j"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7qw-Ud-Jrf" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -69,7 +69,7 @@
         <!--Title-->
         <scene sceneID="xu0-HC-uDs">
             <objects>
-                <viewController id="zOY-Wl-vVa" sceneMemberID="viewController">
+                <viewController id="zOY-Wl-vVa" customClass="UISideMenuNavigationController" customModule="SideMenu" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="db5-ke-2Dq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -77,10 +77,13 @@
                         <viewLayoutGuide key="safeArea" id="Ugg-rp-ZoH"/>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="Tzy-AH-DdK"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="leftSide" value="YES"/>
+                    </userDefinedRuntimeAttributes>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KwI-s5-K5U" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3681" y="-1439"/>
+            <point key="canvasLocation" x="3358" y="-1439"/>
         </scene>
         <!--Tab Bar-->
         <scene sceneID="WrV-3c-cXk">
