added func for dots to appear on the calendar

--- a/DI-App/Base.lproj/Main.storyboard
+++ b/DI-App/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
         <!--Title-->
         <scene sceneID="xu0-HC-uDs">
             <objects>
-                <viewController id="zOY-Wl-vVa" customClass="UISideMenuNavigationController" customModule="SideMenu" sceneMemberID="viewController">
+                <viewController id="zOY-Wl-vVa" customClass="SideMenuViewController" customModule="DI_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="db5-ke-2Dq">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
