--- a/DI-App/login/Login.xib
+++ b/DI-App/login/Login.xib
@@ -13,10 +13,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Login" customModule="DI_App" customModuleProvider="target">
             <connections>
                 <outlet property="containerView" destination="zJ0-sk-Mj5" id="ovR-tU-pB2"/>
-                <outlet property="emailTxtField" destination="9a0-Hw-4ib" id="FJQ-66-65d"/>
+                <outlet property="emailTxtField" destination="3ur-K1-Fu2" id="isf-dB-CwZ"/>
                 <outlet property="goIn" destination="Zhp-op-0lo" id="DIB-je-bi6"/>
                 <outlet property="logReg" destination="CR9-uF-O2v" id="w00-DS-Wnh"/>
-                <outlet property="passwordTextField" destination="OtO-rL-M6h" id="4wE-pi-RXI"/>
+                <outlet property="passwordTextField" destination="wRB-bo-gdi" id="Gsm-1B-uuK"/>
                 <outlet property="registerForm" destination="HwG-x3-Sme" id="44n-pp-aDZ"/>
                 <outlet property="rememberMeButton" destination="FzO-7I-syL" id="WQ8-0f-oRk"/>
                 <outlet property="scrollView" destination="MY8-4U-isZ" id="q9U-z8-cPk"/>
@@ -126,38 +126,92 @@
             <point key="canvasLocation" x="136.5" y="54.5"/>
         </view>
         <view contentMode="scaleToFill" id="zJ0-sk-Mj5">
-            <rect key="frame" x="0.0" y="0.0" width="367" height="303"/>
+            <rect key="frame" x="0.0" y="0.0" width="367" height="1074"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" distribution="fillEqually" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="HwG-x3-Sme">
-                    <rect key="frame" x="16" y="100" width="132" height="150"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="HwG-x3-Sme">
+                    <rect key="frame" x="0.0" y="25" width="367" height="92"/>
                     <subviews>
-                        <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A5S-Wu-PuD">
-                            <rect key="frame" x="0.0" y="0.0" width="132" height="34"/>
+                        <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A5S-Wu-PuD">
+                            <rect key="frame" x="0.0" y="0.0" width="367" height="34"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9a0-Hw-4ib">
-                            <rect key="frame" x="0.0" y="58" width="132" height="34"/>
+                        <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bGo-CR-fPY">
+                            <rect key="frame" x="0.0" y="58" width="367" height="34"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="25"/>
                             <textInputTraits key="textInputTraits"/>
-                        </textField>
-                        <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OtO-rL-M6h">
-                            <rect key="frame" x="0.0" y="116" width="132" height="34"/>
-                            <nil key="textColor"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                            <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                         </textField>
                     </subviews>
                 </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="bLD-m6-yVA">
+                    <rect key="frame" x="0.0" y="125" width="367" height="150"/>
+                    <subviews>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="LinkedIn" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dSP-GN-MmB">
+                            <rect key="frame" x="0.0" y="0.0" width="367" height="34"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3ur-K1-Fu2">
+                            <rect key="frame" x="0.0" y="58" width="367" height="34"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <textInputTraits key="textInputTraits" textContentType="email"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Phone Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bFf-8R-vr9">
+                            <rect key="frame" x="0.0" y="116" width="367" height="34"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits" textContentType="tel"/>
+                        </textField>
+                    </subviews>
+                    <viewLayoutGuide key="safeArea" id="kzl-RG-OXx"/>
+                </stackView>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="glc-xI-JuZ">
+                    <rect key="frame" x="0.0" y="283" width="367" height="492"/>
+                    <subviews>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Session" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7zt-Fz-r6K">
+                            <rect key="frame" x="0.0" y="0.0" width="367" height="30"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EVJ-Mi-YR6">
+                            <rect key="frame" x="0.0" y="30" width="367" height="216"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </pickerView>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Country you're from" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wRB-bo-gdi">
+                            <rect key="frame" x="0.0" y="246" width="367" height="30"/>
+                            <nil key="textColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5NN-Dn-8Ob">
+                            <rect key="frame" x="0.0" y="276" width="367" height="216"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </pickerView>
+                    </subviews>
+                    <viewLayoutGuide key="safeArea" id="0sa-fS-yfc"/>
+                </stackView>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.2853178193" blue="0.70213325780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="HwG-x3-Sme" firstAttribute="top" secondItem="Vwn-aQ-uTB" secondAttribute="top" constant="5" id="25b-GA-wGv"/>
+                <constraint firstItem="Vwn-aQ-uTB" firstAttribute="trailing" secondItem="HwG-x3-Sme" secondAttribute="trailing" id="2h9-cO-SZI"/>
+                <constraint firstItem="glc-xI-JuZ" firstAttribute="leading" secondItem="Vwn-aQ-uTB" secondAttribute="leading" id="Mfh-dO-et1"/>
+                <constraint firstItem="bLD-m6-yVA" firstAttribute="leading" secondItem="Vwn-aQ-uTB" secondAttribute="leading" id="TE3-Tc-TE2"/>
+                <constraint firstItem="HwG-x3-Sme" firstAttribute="leading" secondItem="Vwn-aQ-uTB" secondAttribute="leading" id="dhn-nt-LSB"/>
+                <constraint firstItem="Vwn-aQ-uTB" firstAttribute="trailing" secondItem="bLD-m6-yVA" secondAttribute="trailing" id="evG-QE-CVL"/>
+                <constraint firstItem="Vwn-aQ-uTB" firstAttribute="trailing" secondItem="glc-xI-JuZ" secondAttribute="trailing" id="iif-tQ-SSf"/>
+                <constraint firstItem="bLD-m6-yVA" firstAttribute="top" secondItem="HwG-x3-Sme" secondAttribute="bottom" constant="8" id="lZc-yD-flC"/>
+                <constraint firstItem="glc-xI-JuZ" firstAttribute="top" secondItem="bLD-m6-yVA" secondAttribute="bottom" constant="8" id="yGF-Ip-4na"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="Vwn-aQ-uTB"/>
-            <point key="canvasLocation" x="-440.5" y="94.5"/>
+            <point key="canvasLocation" x="-440.5" y="480"/>
         </view>
     </objects>
     <resources>
